# G-Pilot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  check_run.py  get_latest.py  pyproject.toml  test_fork.py  test_pydantic.py  test_settings.py  test_webhook.py
backend/tests/: _test_bootstrap.py  test_config.py  test_docker_runner.py  test_github_integration.py  test_json_contracts.py  test_patcher.py  test_repository_manager.py  test_static_scanner.py  test_testing.py  test_validation_agent.py
backend/vuln_swarm/: __init__.py  schemas.py
backend/vuln_swarm/agents/: agent_a.py  agent_b.py  agent_c.py  exploits.py  patcher.py  testing.py
backend/vuln_swarm/api/: app.py  dependencies.py
backend/vuln_swarm/core/: __init__.py  config.py  json_utils.py  llm.py  logging.py
backend/vuln_swarm/git/: __init__.py  github.py  repository.py
backend/vuln_swarm/orchestration/: graph.py  state.py
backend/vuln_swarm/rag/: documents.py  ingest.py  vector_store.py
backend/vuln_swarm/sandbox/: __init__.py  docker_runner.py
backend/vuln_swarm/scanner/: __init__.py  static.py
backend/vuln_swarm/storage/: job_store.py
backend/vuln_swarm/workers/: pipeline.py
docs/: api.md  architecture.md  security_model.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
scripts/: run_backend.sh
