[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-swarm"
version = "0.1.0"
description = "Multi-agent security automation system with FastAPI, LangGraph, ChromaDB, Docker, and GitHub PR automation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "pypdf>=4.2.0",
  "pip-tools>=7.5.0",
  "tenacity>=8.3.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["vuln_swarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
